WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260471
In-place interpreter: fix clobbered register in call and reduce memory usage for if and br
https://bugs.webkit.org/show_bug.cgi?id=260471
Summary
In-place interpreter: fix clobbered register in call and reduce memory usage ...
daniel_liu4
Reported
2023-08-21 09:54:57 PDT
Fixed an issue where the operation function call during the Wasm call instruction would clobber unsaved registers, leading to a crash. Reduced if and br memory usage by 3 bytes.
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2023-08-21 09:58:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16890
daniel_liu4
Comment 2
2023-08-21 14:40:13 PDT
<
rdar://problem/114218539
>
EWS
Comment 3
2023-08-22 11:09:08 PDT
Committed
267142@main
(fcf3ca83171a): <
https://commits.webkit.org/267142@main
> Reviewed commits have been landed. Closing PR #16890 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug