In-place interpreter: fix clobbered register in call and reduce memory usage for if and br https://bugs.webkit.org/show_bug.cgi?id=260471 rdar://114218539

Reviewed by Yusuke Suzuki.

Updated `call` instruction to save caller save registers around the operation call.
Reduce memory usage for if and br by 3B by saving the size of the instruction instead of the next PC.

* Source/JavaScriptCore/llint/InPlaceInterpreter.asm:
* Source/JavaScriptCore/wasm/WasmIPIntGenerator.cpp:
(JSC::Wasm::IPIntGenerator::addIf):
(JSC::Wasm::IPIntGenerator::addBranch):
(JSC::Wasm::IPIntGenerator::addSwitch):

Canonical link: https://commits.webkit.org/267142@main